[gd_scene load_steps=9 format=2]

[ext_resource path="res://Main.gd" type="Script" id=1]
[ext_resource path="res://space.png" type="Texture" id=2]
[ext_resource path="res://UFO.tscn" type="PackedScene" id=3]
[ext_resource path="res://song.ogg" type="AudioStream" id=4]
[ext_resource path="res://Unique.ttf" type="DynamicFontData" id=5]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 528.755, 304.823 )

[sub_resource type="DynamicFont" id=2]

size = 20
use_mipmaps = true
use_filter = true
font_data = ExtResource( 5 )
_sections_unfolded = [ "Font", "Settings" ]

[sub_resource type="DynamicFont" id=3]

size = 80
use_mipmaps = false
use_filter = false
font_data = ExtResource( 5 )
_sections_unfolded = [ "Font", "Settings" ]

[node name="Main" type="Node2D" index="0"]

script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="." index="0"]

position = Vector2( 512.191, 301.031 )
scale = Vector2( 1, 0.588571 )
texture = ExtResource( 2 )
_sections_unfolded = [ "Transform" ]

[node name="UFO" parent="." index="1" instance=ExtResource( 3 )]

[node name="Area2D" type="Area2D" parent="." index="2"]

position = Vector2( 523.486, 295.469 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D" index="0"]

shape = SubResource( 1 )

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="." index="3"]

stream = ExtResource( 4 )
volume_db = 24.0
autoplay = true
max_distance = 2000.0
attenuation = 1.0
bus = "Master"
area_mask = 1

[node name="ClickLabel" type="Label" parent="." index="4"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 40.0
margin_bottom = 14.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 2 )
text = "Click: 0"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Theme", "custom_fonts" ]

[node name="LoseLabel" type="Label" parent="." index="5"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 379.0
margin_top = 247.0
margin_right = 685.0
margin_bottom = 340.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0.914063, 0.866306, 0.149961, 1 )
text = "You Lose"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Rect", "custom_colors", "custom_fonts" ]

[connection signal="input_event" from="Area2D" to="." method="_on_Area2D_input_event"]


